--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="images/feviconbig.png"/>
+    <link rel="icon" href="https://github.com/mayur-argade/Lakshya/blob/readme/src/images/feviconbig.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
